olddeploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot
spec:
  selector:
    app: springboot
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-prod  # or your custom issuer if you're using your own cert
spec:
  rules:
  - host: test.trainwithumesh.in.net  # This should match your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot  # The name of your service
            port:
              number: 8080
  tls:
  - hosts:
    - test.trainwithumesh.in.net
    secretName: test-cert  # The secret containing your TLS certificate
---
# Mongo Node Port RC
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo
