springBootMongo.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot
spec:
  selector:
    app: springboot
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: test.trainwithumesh.in.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: springboot
              port:
                number: 8080
  tls:
  - hosts:
    - test.trainwithumesh.in.net
    secretName: test-cert  # Referencing the SSL certificate secret
---
# Mongo Node Port RC
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo
